fix css spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -307,6 +307,9 @@ $plain-transition: all .25s ease-in-out;
 
 img {
   width: 100%;
+}
+
+p > img {
   margin-bottom: -6.5px;
 }
 
